# cuda

./: CMakeLists.txt  README.md
src/: gemm.ipynb
src/cpu/: cpu_kernels.cpp  cpu_kernels.h
src/csrc/: init_utils.h  matrix.h  tensor.h  timing_utils.h  utils.h
src/cuda/: cuda_utils.h  grayscale.cu  invocations.cu  invocations.h  kernels.cu  kernels.h  main.cu  matmul.cu  saxpy.cu
src/cuda/kernels/: attention.cu  attention.h  convolutions.cu  convolutions.h  gemm.cu  gemm.h  reductions.cu  reductions.h  softmax.cu  softmax.h  tiled_matmul.md  tutorials.cu  tutorials.h
src/cuda/notes/: arch_scheduling.md  warps_occupancy.md
src/cuda/utils/: cuda_utils.h
